tests/fixtures/invalid/str_mod_bool.py
# Cannot modulo Str and Bool
x: str = "hello" % True
